--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
             </div>
 
         </div>
+        <footer>
+            <div class="copyright">
+                <p>&copy; 2024, SwathyBinoj - Box-Shadow-Generator</p>
+            </div>
+        </footer>
 
     </div>
 
